# Connect4

./: .gitignore  CMakeLists.txt  README.txt
.cache/clangd/index/: Board.cpp.476734A34DB643E2.idx  Board.hpp.00580A7FF4811126.idx  Main.cpp.8C2824BD11A55511.idx  Player.cpp.2864B55DC08AF3C6.idx  Player.hpp.D385556D172961D9.idx
include/: Board.hpp  Player.hpp
src/: Board.cpp  CMakeLists.txt  Main.cpp  Player.cpp
