CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)

PROJECT(connect4)

SET(CLANG_COMPILE_FLAGS "-std=c++17")

SET(CMAKE_CXX_FLAGS ${CLANG_COMPILE_FLAGS})

INCLUDE_DIRECTORIES("include/")

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

ADD_EXECUTABLE(${PROJECT_NAME} ./src/Main.cpp)

ADD_SUBDIRECTORY(src)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} connectlib)
